# RGBsplitter

./: .gitignore  pyproject.toml  rgbsplitter.spec
scripts/: build.bat
src/rgbsplitter/: __main__.py  app.py  main_window.py  styles.py
src/rgbsplitter/core/: __init__.py  image_ops.py  updater.py
src/rgbsplitter/resources/: __init__.py
src/rgbsplitter/ui/: controls.py  export_controls.py  export_status_bar.py  preview_area.py  update_controller.py  workers.py
src/rgbsplitter/ui/tabs/: merge_tab.py  mix_tab.py  split_tab.py
