[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rgbsplitter"
version = "1.0.0"
description = "Desktop tool for splitting, merging, and mixing RGBA image channels."
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10",
    "PySide6>=6.6",
]

[project.scripts]
rgbsplitter = "rgbsplitter.app:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rgbsplitter = ["resources/*.png", "resources/*.ico"]

[tool.pytest.ini_options]
pythonpath = ["src"]
