[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rgbsplitter"
dynamic = ["version"]
description = "Desktop tool for splitting, merging, and mixing RGBA image channels."
requires-python = ">=3.10"
dependencies = [
    "packaging>=24",
    "Pillow>=10",
    "PySide6>=6.6",
]

[project.scripts]
rgbsplitter = "rgbsplitter.app:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rgbsplitter = ["resources/*.png", "resources/*.ico"]

[tool.setuptools.dynamic]
version = {attr = "rgbsplitter.version.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
